--- a/thesis_experiment_android/app/src/main/res/layout/activity_main.xml
+++ b/thesis_experiment_android/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/accent"
+        app:titleTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/main_navigation_title" />
 
+    <View
+        android:id="@+id/viewDividerBottomToolbar"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/general_divider"
+        android:background="@color/divider_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHome"
@@ -25,6 +34,7 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:paddingVertical="@dimen/spacing_small"
+        android:layout_marginVertical="@dimen/spacing_medium"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,3 +42,4 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
