--- a/thesis_experiment_android/app/src/main/res/navigation/nav_graph.xml
+++ b/thesis_experiment_android/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
-
+    app:startDestination="@id/homeFragment">
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.thesis_app.ui.general.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/homeFragment"
+        android:name="com.example.thesis_app.ui.main.fragment.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_homeFragment_to_hoofdstuk1Fragment"
+            app:destination="@id/hoofdstuk1Fragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.thesis_app.ui.general.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+        android:id="@+id/hoofdstuk1Fragment"
+        android:name="com.example.thesis_app.ui.hoofdstuk1.fragment.Hoofdstuk1Fragment"
+        android:label="@string/home_hoofdstuk1_title" />
 </navigation>
