--- a/android/bap_experiment_android/app/src/main/res/layout/list_item_main.xml
+++ b/android/bap_experiment_android/app/src/main/res/layout/list_item_main.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardLayout"
     android:background="@color/design_default_color_primary"
     android:layout_margin="8dp"
-    android:padding="8dp"
+    android:paddingHorizontal="8dp"
+    android:paddingVertical="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -18,14 +18,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="test" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/transparent"
+        android:src="@android:drawable/ic_media_play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
